--- a/DocsVision_Test-master/Registration/Registrstion.WinForms/App.config
+++ b/DocsVision_Test-master/Registration/Registrstion.WinForms/App.config
@@ -3,7 +3,7 @@
   <configSections>
     <section name ="DataSerializeService" type="Registration.DataSerialization.DataSerializationServiceFactorySectionHandler, Registration.DataSerialization" />
   </configSections>
-  <DataSerializeService Name="Registration.DataSerialization.DataSerializationXML`1[[Registration.Model.LetterWithReminderData, Registretion.Model, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null]]"/>
+  <DataSerializeService Name="Registration.DataSerialization.DataSerializationXML"/>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
