added arrowKey func

--- a/DocsVision_Test-master/Registration/Registrstion.WinForms/Registration.WinForms.csproj
+++ b/DocsVision_Test-master/Registration/Registrstion.WinForms/Registration.WinForms.csproj
@@ -89,6 +89,12 @@
     <Compile Include="Controlers\ButtonCreateCancelControl.Designer.cs">
       <DependentUpon>ButtonCreateCancelControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controlers\CreateFolderControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controlers\CreateFolderControl.Designer.cs">
+      <DependentUpon>CreateFolderControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controlers\FullContentLetterControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -161,12 +167,6 @@
     <Compile Include="Forms\CreateFolderForm.Designer.cs">
       <DependentUpon>CreateFolderForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\CreateSearchFolderForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\CreateSearchFolderForm.Designer.cs">
-      <DependentUpon>CreateSearchFolderForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\FullContentLetterForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +206,7 @@
     <Compile Include="IFolderPropertiesUIPlugin.cs" />
     <Compile Include="ILetterPropertiesUIPlugin.cs" />
     <Compile Include="IPluginService.cs" />
+    <Compile Include="IPropertiesUIPlugin.cs" />
     <Compile Include="Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -223,6 +224,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controlers\ButtonCreateCancelControl.resx">
       <DependentUpon>ButtonCreateCancelControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controlers\CreateFolderControl.resx">
+      <DependentUpon>CreateFolderControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controlers\FullContentLetterControl.resx">
       <DependentUpon>FullContentLetterControl.cs</DependentUpon>
@@ -259,9 +263,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\CreateFolderForm.resx">
       <DependentUpon>CreateFolderForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\CreateSearchFolderForm.resx">
-      <DependentUpon>CreateSearchFolderForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FullContentLetterForm.resx">
       <DependentUpon>FullContentLetterForm.cs</DependentUpon>
