--- a/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
@@ -60,15 +60,37 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commands\DelegateCommand.cs" />
+    <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Compile Include="ViewModels\AuthorizationViewModel.cs" />
     <Compile Include="ViewModels\Command.cs" />
     <Compile Include="ViewModels\Notifier.cs" />
+    <Compile Include="Views\AddWorkersFromAllWorkersListWindow.xaml.cs">
+      <DependentUpon>AddWorkersFromAllWorkersListWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\AuthorizationWindow.xaml.cs">
       <DependentUpon>AuthorizationWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Controls\AuthorizationControl.xaml.cs">
       <DependentUpon>AuthorizationControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Controls\CreateFolderControl.xaml.cs">
+      <DependentUpon>CreateFolderControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Controls\FullContentLetterControl.xaml.cs">
+      <DependentUpon>FullContentLetterControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Controls\WorkersEditorControl.xaml.cs">
+      <DependentUpon>WorkersEditorControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RenameFolderWindow.xaml.cs">
+      <DependentUpon>RenameFolderWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FullContentLetterWindow.xaml.cs">
+      <DependentUpon>FullContentLetterWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MakeLetterWindow.xaml.cs">
+      <DependentUpon>MakeLetterWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SingUpWindow.xaml.cs">
       <DependentUpon>SingUpWindow.xaml</DependentUpon>
@@ -85,11 +107,39 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\AddWorkersFromAllWorkersListWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\AuthorizationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Controls\AuthorizationControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Controls\CreateFolderControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Controls\FullContentLetterControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Controls\WorkersEditorControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\RenameFolderWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FullContentLetterWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\MakeLetterWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
