add new ViewModel for SingUp View

--- a/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
@@ -61,6 +61,7 @@
     </ApplicationDefinition>
     <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="Models\LetterModel.cs" />
     <Compile Include="Models\NodeModel.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Compile Include="ViewModels\AuthorizationViewModel.cs" />
