--- a/DocsVision_Test-master/Registration/Registration.Plugins/Registration.Plugins.csproj
+++ b/DocsVision_Test-master/Registration/Registration.Plugins/Registration.Plugins.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2EC944F6-FDDE-4A26-BA04-27EE4B580D47}</ProjectGuid>
+    <ProjectGuid>{3A1A1EE2-602C-4359-BB35-49203C2FB362}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Registration.Plugins</RootNamespace>
@@ -30,13 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.4.12\lib\net45\NLog.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,36 +41,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
+    <Compile Include="IFolderPropertiesUIPlugin.cs" />
+    <Compile Include="ILetterPropertiesUIPlugin.cs" />
+    <Compile Include="IPluginService.cs" />
+    <Compile Include="IPropertiesUIPlugin.cs" />
+    <Compile Include="PluginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SearchFolderForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SearchFolderForm.Designer.cs">
-      <DependentUpon>SearchFolderForm.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="SearchFolderForm.resx">
-      <DependentUpon>SearchFolderForm.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Registration.Logger\Registration.Logger.csproj">
-      <Project>{2eb8e0cb-1fac-4185-8315-96a50d92db69}</Project>
-      <Name>Registration.Logger</Name>
+    <ProjectReference Include="..\Registration.ClientInterface\Registration.ClientInterface.csproj">
+      <Project>{c715b00f-8ec8-48f7-b18c-c6c7b954f884}</Project>
+      <Name>Registration.ClientInterface</Name>
     </ProjectReference>
     <ProjectReference Include="..\Registretion.Model\Registration.Model.csproj">
       <Project>{8c0a1308-ae5a-4d36-ac6c-5e808a9c929e}</Project>
       <Name>Registration.Model</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Registrstion.WinForms\Registration.WinForms.csproj">
-      <Project>{140b793f-cdd4-44cd-a557-67644d1cd6ef}</Project>
-      <Name>Registration.WinForms</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
