--- a/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
@@ -41,6 +41,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,8 +63,13 @@
     </ApplicationDefinition>
     <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="Models\IFolderPropertiesUIPlugin.cs" />
+    <Compile Include="Models\ILetterPropertiesUIPlugin.cs" />
+    <Compile Include="Models\IPluginService.cs" />
+    <Compile Include="Models\IPropertiesUIPlugin.cs" />
     <Compile Include="Models\LetterModel.cs" />
     <Compile Include="Models\NodeModel.cs" />
+    <Compile Include="Models\PluginService.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Compile Include="ViewModels\AuthorizationViewModel.cs" />
     <Compile Include="ViewModels\Command.cs" />
