--- a/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
@@ -68,16 +68,21 @@
     <Compile Include="Models\IPluginService.cs" />
     <Compile Include="Models\IPropertiesUIPlugin.cs" />
     <Compile Include="Models\LetterModel.cs" />
+    <Compile Include="Models\LettersType.cs" />
     <Compile Include="Models\NodeModel.cs" />
     <Compile Include="Models\PluginService.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Compile Include="ViewModels\AuthorizationViewModel.cs" />
     <Compile Include="ViewModels\Command.cs" />
-    <Compile Include="ViewModels\ImportantLetterControl.cs" />
+    <Compile Include="ViewModels\FullContentLetterControlViewModel.cs" />
+    <Compile Include="ViewModels\ImportantLetterControlViewModel.cs" />
+    <Compile Include="ViewModels\LetterWithResponseTimeControlViewModel.cs" />
     <Compile Include="ViewModels\NodeProvider.cs" />
     <Compile Include="ViewModels\Notifier.cs" />
+    <Compile Include="ViewModels\SimpleCommand.cs" />
     <Compile Include="ViewModels\SingUpViewModel.cs" />
     <Compile Include="ViewModels\ViewPluginShower.cs" />
+    <Compile Include="ViewModels\WorkersEditorControlViewModel.cs" />
     <Compile Include="Views\AddWorkersFromAllWorkersListWindow.xaml.cs">
       <DependentUpon>AddWorkersFromAllWorkersListWindow.xaml</DependentUpon>
     </Compile>
@@ -96,14 +101,17 @@
     <Compile Include="Views\Controls\ImportanceDegreeEditorControl.xaml.cs">
       <DependentUpon>ImportanceDegreeEditorControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Controls\ImportantLetterControl.xaml.cs">
-      <DependentUpon>ImportantLetterControl.xaml</DependentUpon>
+    <Compile Include="Views\Controls\ImportantLetterControlView.xaml.cs">
+      <DependentUpon>ImportantLetterControlView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Controls\InboxFolderControl.xaml.cs">
       <DependentUpon>InboxFolderControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Controls\LetterWithResponseTimeControl.xaml.cs">
       <DependentUpon>LetterWithResponseTimeControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Controls\ImportantLetterControl.xaml.cs">
+      <DependentUpon>ImportantLetterControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Controls\SearchFolderControl.xaml.cs">
       <DependentUpon>SearchFolderControl.xaml</DependentUpon>
@@ -165,7 +173,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Controls\ImportantLetterControl.xaml">
+    <Page Include="Views\Controls\ImportantLetterControlView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -174,6 +182,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Controls\LetterWithResponseTimeControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Controls\ImportantLetterControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
