fixed folder's plugin

--- a/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ApplicationState.cs" />
     <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="Models\IFolderPropertiesUIPlugin.cs" />
