added interface for make letter window

--- a/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
@@ -66,6 +66,7 @@
     <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="Models\IFolderPropertiesUIPlugin.cs" />
     <Compile Include="Models\ILetterPropertiesUIPlugin.cs" />
+    <Compile Include="Models\IMakeFolderWindow.cs" />
     <Compile Include="Models\IPluginService.cs" />
     <Compile Include="Models\IPropertiesUIPlugin.cs" />
     <Compile Include="Models\LetterModel.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="ViewModels\AuthorizationViewModel.cs" />
     <Compile Include="ViewModels\Command.cs" />
     <Compile Include="ViewModels\InboxFolderViewModel.cs" />
+    <Compile Include="ViewModels\SentFolderViewModel.cs" />
     <Compile Include="ViewModels\StandartLetterControlViewModel.cs" />
     <Compile Include="ViewModels\LetterViewModel.cs" />
     <Compile Include="ViewModels\ImportantLetterControlViewModel.cs" />
