fixed selected item in treeView

--- a/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
@@ -270,7 +270,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Views\Controls\App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Registration.ClientInterface\Registration.ClientInterface.csproj">
