--- a/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
@@ -64,13 +64,20 @@
     <Compile Include="ApplicationState.cs" />
     <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="MessageResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MessageResources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Models\IFolderPropertiesUIPlugin.cs" />
     <Compile Include="Models\ILetterPropertiesUIPlugin.cs" />
     <Compile Include="Models\IMakeFolderWindow.cs" />
+    <Compile Include="Models\IMessageService.cs" />
     <Compile Include="Models\IPluginService.cs" />
     <Compile Include="Models\IPropertiesUIPlugin.cs" />
     <Compile Include="Models\LetterModel.cs" />
     <Compile Include="Models\LettersType.cs" />
+    <Compile Include="Models\MessageService.cs" />
     <Compile Include="Models\NodeModel.cs" />
     <Compile Include="Models\PluginService.cs" />
     <Compile Include="Resource.Designer.cs">
@@ -254,6 +261,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="MessageResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>MessageResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
