added hiding of the users list

--- a/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Registration.WPF.csproj
@@ -104,7 +104,7 @@
     <Compile Include="ViewModels\MakeLetterViewModel.cs" />
     <Compile Include="ViewModels\NodeProvider.cs" />
     <Compile Include="ViewModels\Notifier.cs" />
-    <Compile Include="ViewModels\SingUpViewModel.cs" />
+    <Compile Include="ViewModels\SignUpViewModel.cs" />
     <Compile Include="ViewModels\UnreadFolderViewModel.cs" />
     <Compile Include="ViewModels\ViewPluginCreator.cs" />
     <Compile Include="ViewModels\WorkersEditorControlViewModel.cs" />
