--- a/DocsVision_Test-master/Registration/Registration.Api/Web.config
+++ b/DocsVision_Test-master/Registration/Registration.Api/Web.config
@@ -9,7 +9,8 @@
     <section name="ConfigurationService" type="Registration.Api.ConfigurationServiceFactorySectionHandle, Registration.Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <section name ="DataSerializeService" type="Registration.DataSerialization.DataSerializationServiceFactorySectionHandler, Registration.DataSerialization" />
   </configSections>
-  <DatabaseFactoryConfiguration Name="Registration.DatabaseFactory.MsSqlDatabase"/>
+ <DatabaseFactoryConfiguration Name="Registration.DatabaseFactory.MsSqlDatabase"/>
+ <!--<DatabaseFactoryConfiguration Name="Registration.DatabaseFactory.DocsVisionDatabase"/>-->
   <ConfigurationService Name="Registration.Api.WebConfigurationService"/>
   <DataSerializeService Name="Registration.DataSerialization.DataSerializationXML"/>
   <appSettings>
